--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: My GitHub Blog
 description: A simple blog powered by GitHub Pages and Jekyll
 baseurl: "" # оставляем пустым для корня
-url: "https://rylkoroman.github.io" # без слеша в конце
-theme: jekyll-theme-minimal
+url: "https://rylkoroman.github.io/rylkoroman/" # без слеша в конце
+theme: minima
